--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,6 @@
   <body>
     <!-- our app will be injected here -->
     <div id="root"></div>
+    <!-- HTML Webpack plugin will take care of injecting script for us -->
   </body>
 </html>
